--- a/styles/input.css
+++ b/styles/input.css
@@ -22,7 +22,7 @@
 
 .light-mode {
   --color-primary: #ffffff;
-  --color-secondary: #00e676;
+  --color-secondary: #00c73d;
   --color-white: #454e56;
   --color-dark: #000;
   --color-grey0: #f8f8f8;
